# modify

./: Cargo.toml  README.MD
crates/modify/: Cargo.toml
crates/modify-by/: Cargo.toml
crates/modify-by-macros/: Cargo.toml
crates/modify-by/src/: conditional.rs  extend.rs  function.rs  indexed.rs  lib.rs  map.rs  sequence.rs  set.rs  then.rs  tuple.rs
crates/modify-by/tests/: test_basic_types.rs  test_serde_json.rs
crates/modify-json/: Cargo.toml
crates/modify-json/src/: ensure.rs  json_path.rs  lib.rs  serialize.rs
crates/modify-macros/: Cargo.toml
crates/modify-macros/src/: lib.rs  modification.rs
crates/modify/src/: conditional.rs  extend.rs  function.rs  indexed.rs  lib.rs  macros.rs  map.rs  merge.rs  sequence.rs  set.rs  then.rs  tuple.rs
crates/modify/tests/: test_basic_types.rs  test_layers.rs  test_macros.rs  test_serde_json.rs
src/: extend.rs  lib.rs  merge.rs  serde_impl.rs  set.rs
tests/: test_merge_map.rs
