[package]
name = "modify-by-macros"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
homepage.workspace = true
categories.workspace = true
readme.workspace = true


[lib]
proc-macro = true

[dependencies]
syn = {version = "2", features = ["full"]}
quote = "1"
proc-macro2 = "1"
serde_json = "1.0"
darling = { version = "0.20" }