[package]
name = "modify-json"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
homepage.workspace = true
categories.workspace = true
readme.workspace = true

[dependencies]
modify-core = { path = "../modify" }
jsonpath-rust = "1.0.3"
serde_json = { version = "1" }
